unpackaged/main/default/objects/Mass_Email_Status__c/Mass_Email_Status__c.object-meta.xml
<CustomObject>
    <label>Mass Email Status</label>
    <nameField>
        <label>Mass Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mass Email Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>