unpackaged/main/default/objects/Mass_Email_Status__c/fields/Addressed_to__c.field-meta.xml
<CustomField>
    <fullName>Addressed_to__c</fullName>
    <label>Addressed to</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>