unpackaged/main/default/objects/Mass_Email_Status__c/fields/BCC_me_on_one_message__c.field-meta.xml
<CustomField>
    <fullName>BCC_me_on_one_message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BCC me on one message</label>
    <type>Checkbox</type>
</CustomField>