unpackaged/main/default/objects/Mass_Email_Status__c/fields/Mass_Email_Triggered_from__c.field-meta.xml
<CustomField>
    <fullName>Mass_Email_Triggered_from__c</fullName>
    <label>Mass Email Triggered from</label>
    <length>255</length>
    <type>Text</type>
</CustomField>