unpackaged/main/default/objects/Mass_Email_Status__c/fields/Sent_to__c.field-meta.xml
<CustomField>
    <fullName>Sent_to__c</fullName>
    <label>Sent to</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>