unpackaged/main/default/objects/Mass_Email_Status__c/fields/Use_my_signature__c.field-meta.xml
<CustomField>
    <fullName>Use_my_signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use my signature</label>
    <type>Checkbox</type>
</CustomField>