unpackaged/main/default/objects/Mass_Email_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mass_Email_Triggered_from__c</columns>
    <columns>Template_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Addressed_to__c</columns>
    <columns>Sent_to__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>